# hello-cuda

./: CMakeLists.txt  CMakePresets.json  License.md  Readme.md
mandelbrot/: CMakeLists.txt
mandelbrot/include/: image.hpp  kernel.cuh  utils.cuh
mandelbrot/src/: image.cpp  kernel.cu  main.cpp  utils.cu
